# OI-wiki

./: (1, 1, 0);  .bashrc  .clang-format  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .htmltest.yml  .mailmap  .mergify.yml  .prettierrc  .remarkignore  .remarkrc  .travis.yml  404.html  CITATION.bib  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  Dockerfile  OI-wiki  Pipfile  README.md  Sitemap_Parser.py  _redirects  authors.json  build.sh  contributing.md  crowdin.yml  deploy.sh  digit_dp.md  e.py  edit-landing.md  gulpfile.cjs  gulpfile.js  index.html  manifest.webmanifest  mkdocs.yml  netlify.toml  netlify_build.sh  (+10 more)
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  config.yml  pull_request_template.md
authors/: ouuan.md
basic/: index.html
contest/: index.html
docs/: CNAME  _redirects  edit-landing.md  index.md  manifest.webmanifest
dp/: index.html
ds/: index.html
edit-landing/: index.html
geometry/: index.html
graph/: index.html
hooks/: on_env.py
lang/: index.html
math/: index.html
misc/: index.html
patches/: README.md  mdast-util-to-markdown+1.3.0.patch
scripts/: BaiduPusher.sh  README.md  Sitemap_Parser.py  add-description.js  build.sh  celebration.py  char-map.json  check-characters.py  check-config.py  check-details.py  cjk-map.json  correctness_check.py  fetch-authors.js  find_jk.py  fix-details.py  fix_details.py  gen_redirect.py  get_files_to_test.py  html-postprocess.js  install_theme.sh  install_theme_vendor.sh  linter_patch.py  netlify_build.sh  post-build.sh  preload.js  render_git_history_info.sh  render_math.js  sum-up.py  (+15 more)
(+3792 files in other folders)
