[project]
name = "oi-wiki"
version = "1.0.0"
description = "OI Wiki - Programming Competition Knowledge Base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs==1.5.3",
    "pymdown-extensions==10.3.1",
    "pygments",
    "beautifulsoup4",
    "requests",
    "markdown==3.6",
    "python-markdown-document-offsets-injection-extension==0.5.13",
    "mkdocs-toggle-sidebar-plugin==0.0.8",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.10.6",
    "parameterized>=0.9.0",
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

[tool.coverage.run]
branch = true
omit = [
    "test/*"
    ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    "if __name__ == .__main__.:",
    ]

[tool.coverage.html]
directory = ".coverage_html_report"
